// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ribbon with a text 1`] = `
<div
  className="root"
>
  <a
    className="link"
    href="http://example.com"
  >
    Share the repo
  </a>
</div>
`;

exports[`should render ribbon with custom background and color 1`] = `
<div
  className="root"
>
  <a
    className="link"
    href="http://example.com"
  >
    Share the repo
  </a>
</div>
`;

exports[`should render ribbon with url 1`] = `
<div
  className="root"
>
  <a
    className="link"
    href="http://example.com"
  >
    Fork me on GitHub
  </a>
</div>
`;
